First item component added

--- a/src/WishlistView/WishlistView.scss
+++ b/src/WishlistView/WishlistView.scss
@@ -1,3 +1,16 @@
 .WishlistView {
-  background: darkolivegreen;
+}
+
+
+.WishlistViewItem {
+}
+
+.WishlistViewItem--Title {
+  text-transform: uppercase;
+}
+.WishlistViewItem--LinkBar {
+
+}
+.WishlistViewItem--LinkBarItem {
+  margin-right: 10px;
 }
