Render items using props

--- a/src/WishlistView/WishlistView.scss
+++ b/src/WishlistView/WishlistView.scss
@@ -3,14 +3,13 @@
 
 
 .WishlistViewItem {
+  margin: 20px 0;
 }
 
 .WishlistViewItem--Title {
   text-transform: uppercase;
 }
-.WishlistViewItem--LinkBar {
 
-}
 .WishlistViewItem--LinkBarItem {
   margin-right: 10px;
 }
