--- a/src/WishlistView/WishlistView.scss
+++ b/src/WishlistView/WishlistView.scss
@@ -1,12 +1,35 @@
-.WishlistViewItem {
-  margin: 20px 0;
-}
+.WishlistView {
 
-.WishlistViewItem--Title {
-  text-transform: uppercase;
-}
+  .WishlistViewItem {
+    margin: 20px 0;
+  }
 
-.LinkBarItem {
-  margin-right: 10px;
-  font-size: 110%;
+  .ImageBlock {
+    position: relative;
+    width: 200px;
+  }
+  .ImageBlock--Overlay {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    width: 100%;
+  }
+
+  .ImageBlock--OverlayText {
+    color: white;
+    font-size: 20px;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+  }
+
+  .WishlistViewItem--Title {
+    text-transform: uppercase;
+  }
+
+  .LinkBarItem {
+    margin-right: 10px;
+    font-size: 110%;
+  }
+
 }
