--- a/src/WishlistView/WishlistView.scss
+++ b/src/WishlistView/WishlistView.scss
@@ -18,8 +18,8 @@
   .ImageBlock--OverlayText {
     color: white;
     font-size: 20px;
-    background: rgb(0, 0, 0); /* fallback color */
-    background: rgba(0, 0, 0, 0.7);
+    background: mix(black, white, 50%); // fallback for non rgba support
+    background: rgba(black, 0.7);
     padding: 10px;
   }
 
