removed View from component and file names

--- a/src/Wishlist/Wishlist.scss
+++ b/src/Wishlist/Wishlist.scss
@@ -1,6 +1,6 @@
-.WishlistView {
+.Wishlist {
 
-  .WishlistViewItem {
+  .WishlistItem {
     margin: 20px 0;
   }
 
@@ -23,7 +23,7 @@
     padding: 10px;
   }
 
-  .WishlistViewItem--Title {
+  .WishlistItem--Title {
     text-transform: uppercase;
   }
 
