--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$bg-color-dark: black;
+$accent-color: black;
 
 // ELEMENTS
-$appbar-height: 40px;
+$appbar-height: 45px;
 $sidebar-min-width: 220px;
 
 /* http://css-tricks.com/snippets/css/clear-fix */
