--- a/src/Wishlist/_Wishlist.scss
+++ b/src/Wishlist/_Wishlist.scss
@@ -1,5 +1,22 @@
 .Wishlist {
 
+  .Heading {
+    .Heading--Title {
+      &.header {
+        margin-bottom: 0.3em;
+      }
+    }
+    .Heading--Action {
+      &.ui.button {
+        margin-top: 3px;
+      }
+    }
+  }
+
+  .ui.card .extra.content {
+    padding: 0.2em !important;
+  }
+
   .WishlistItem {
     margin: 20px 0;
   }
