--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,7 +3,7 @@ $accent-color: black;
 
 // ELEMENTS
 $appbar-height: 45px;
-$sidebar-min-width: 220px;
+$sidebar-min-width: 15rem;
 
 /* http://css-tricks.com/snippets/css/clear-fix */
 .clearfix-group {
