new components for navigation

--- a/src/App/MainAppBar/MainAppBar.scss
+++ b/src/App/MainAppBar/MainAppBar.scss
@@ -1,18 +1,12 @@
 @import '../../globals';
-@import '../../mixins';
-@import "../../../node_modules/react-toolbox/lib/app_bar/config";
-@import "../../../node_modules/react-toolbox/lib/button/config";
 
-// styles from react-toolbox app
 .nav {
-  //flex-grow: 1;
-  //text-align: right;
+  flex-grow: 2;
   > ul {
     list-style: none;
     > li {
       display: inline-block;
       > a {
-        //@include wl-typo-menu;
         position: relative;
         display: inline-block;
         padding: 0 1.5 * $unit;
@@ -32,8 +26,4 @@
       }
     }
   }
-}
-
-.foo {
-	color: red;
 }
